--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
   "tasks": {
-    "dev": "deno run --watch --allow-env=GOOGLE_SDK_NODE_LOGGING,GOOGLE_API_KEY main.js"
+    "dev": "deno run --watch --allow-read --allow-net --allow-env=GOOGLE_SDK_NODE_LOGGING,GOOGLE_API_KEY,GOOGLE_GENAI_API_KEY,GEMINI_API_KEY,GOOGLE_CLOUD_PROJECT,GOOGLE_GENAI_USE_VERTEXAI,WS_NO_BUFFER_UTIL main.js"
   },
   "imports": {
     "@google/genai": "npm:@google/genai@^1.40.0",
